# A-Simple-Web-Server

./: .gitignore  CMakeLists.txt  README.md  index.html
example/: sample_server.c
src/: headers.h  html_reader.c  html_reader.h  main.c  sample_server.c  web_server.c  web_server.h
